
# Author: TheFrenchLeaf https://github.com/TheFrenchLeaf

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(CXSparse C)

INCLUDE_DIRECTORIES(./
./include)

FILE(GLOB CXSparse_SRCS "source/*.c")
set_source_files_properties(${CXSparse_SRCS} PROPERTIES LANGUAGE C)
add_definitions(-DNCOMPLEX)

ADD_LIBRARY(cxsparse SHARED ${CXSparse_SRCS})
if(UNIX)
  TARGET_LINK_LIBRARIES(cxsparse m)
  SET_TARGET_PROPERTIES(cxsparse PROPERTIES COMPILE_FLAGS -fPIC)
ENDIF(UNIX)

IF(CXSPARSE_INCLUDE_INSTALL_DIR)
  SET(INCLUDE_INSTALL_DIR ${CXSPARSE_INCLUDE_INSTALL_DIR})
ELSE()
  SET(INCLUDE_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/include/cxsparse")
ENDIF()

FILE(GLOB CXSPARSE_PUBLIC_HDRS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
INSTALL(FILES ${CXSPARSE_PUBLIC_HDRS} DESTINATION ${INCLUDE_INSTALL_DIR})

INSTALL(TARGETS cxsparse DESTINATION lib EXPORT openMVG-targets)
SET(${CXSPARSE_INCLUDE_INSTALL_DIR} ${INCLUDE_INSTALL_DIR})
